done with frontend

--- a/data_processing/Test.ipynb
+++ b/data_processing/Test.ipynb
@@ -1903,6 +1903,79 @@
     "from DB import upload_to_pinecone\n",
     "upload_to_pinecone(index_name=\"main-db\",docs=docs,namespace=namespace,dimensions=1024)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.dirname(os.path.dirname(os.path.abspath(__file__))))\n",
+    "\n",
+    "import streamlit as st\n",
+    "from chat import chat_with_ollama\n",
+    "from data_processing.DB import upload_to_pinecone\n",
+    "from data_processing.chunkers import chunk_pdf\n",
+    "from langchain_community.document_loaders.pdf import PyPDFLoader\n",
+    "\n",
+    "# Initialize session state for chat history\n",
+    "if \"messages\" not in st.session_state:\n",
+    "    st.session_state.messages = []\n",
+    "\n",
+    "# Sidebar for PDF upload and configuration\n",
+    "with st.sidebar:\n",
+    "    st.header(\"Upload PDF\")\n",
+    "    index_name = st.text_input(\"Index Name\", \"main-db\")\n",
+    "    namespace = st.text_input(\"Namespace\", \"default\")\n",
+    "    dimensions = st.number_input(\"Dimensions\", min_value=1, value=768)\n",
+    "    embedding_model = st.text_input(\"Embedding Model\", \"bge-m3:latest\")\n",
+    "    \n",
+    "    uploaded_file = st.file_uploader(\"Choose a PDF file\", type=\"pdf\")\n",
+    "    \n",
+    "    if uploaded_file is not None:\n",
+    "        with st.spinner(\"Processing PDF...\"):\n",
+    "            # Save the uploaded file to a temporary location\n",
+    "            with open(os.path.join(\"/tmp\", uploaded_file.name), \"wb\") as f:\n",
+    "                f.write(uploaded_file.getbuffer())\n",
+    "            \n",
+    "            pdf_path = os.path.join(\"/tmp\", uploaded_file.name)\n",
+    "            docs = chunk_pdf(pdf_path)\n",
+    "            \n",
+    "            success = upload_to_pinecone(index_name, docs, namespace, dimensions, embedding_model)\n",
+    "            if success:\n",
+    "                st.success(\"PDF uploaded to Pinecone successfully!\")\n",
+    "            else:\n",
+    "                st.error(\"Failed to upload PDF to Pinecone.\")\n",
+    "\n",
+    "# Main chat interface\n",
+    "st.title(\"Chat with Ollama\")\n",
+    "model_name = st.text_input(\"Model Name\", \"llama3.2:1b\")\n",
+    "\n",
+    "# Display chat history\n",
+    "for message in st.session_state.messages:\n",
+    "    with st.chat_message(message[\"role\"]):\n",
+    "        st.markdown(message[\"content\"])\n",
+    "\n",
+    "# Chat input\n",
+    "if prompt := st.chat_input(\"What would you like to know about the document?\"):\n",
+    "    # Add user message to chat history\n",
+    "    st.session_state.messages.append({\"role\": \"user\", \"content\": prompt})\n",
+    "    \n",
+    "    # Display user message\n",
+    "    with st.chat_message(\"user\"):\n",
+    "        st.markdown(prompt)\n",
+    "    \n",
+    "    # Generate and display assistant response\n",
+    "    with st.chat_message(\"assistant\"):\n",
+    "        with st.spinner(\"Thinking...\"):\n",
+    "            response = chat_with_ollama(model_name, prompt)\n",
+    "            st.markdown(response)\n",
+    "            \n",
+    "    # Add assistant response to chat history\n",
+    "    st.session_state.messages.append({\"role\": \"assistant\", \"content\": response})"
+   ]
   }
  ],
  "metadata": {
